--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         google()
-        jcenter()
-        
+//        jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        
+        classpath 'com.android.tools.build:gradle:3.5.2'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,8 +18,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+//        jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public'}
+
     }
 }
 
